Merge pull request #19
* [N/A] test: ajuste sonar

* [N/A] test: ajuste testes linux

* Merge remote-tracking branch 'origin/main' into feature/video-splitter

* [N/A] test: remocao testes linux

* Merge remote-tracking branch 'origin/main' into feature/video-splitter

* Merge remote-tracking branch 'origin/main' into feature/video-splitter

* [N/A] refactor: subida versao

* [N/A] refactor: testes linux

* Merge remote-tracking branch 'origin/main' into feature/video-splitter

* [N/A] refactor: testes linux + melhorias

* Merge remote-tracking branch 'origin/main' into feature/video-splitter

* [N/A] refactor: ajuste validacao unix

* Merge remote-tracking branch 'origin/main' into feature/video-splitter

* [N/A] refactor: melhoria de código

* Merge remote-tracking branch 'origin/main' into feature/video-splitter